# install-playwright-python

./: .pre-commit-config.yaml  README.md  index.html  install_playwright.html  mise.toml  pyproject.toml  search.js  setup.cfg
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
install_playwright/: __init__.py
tests/: test_install_playwright.py
