[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "install-playwright"
version = "0.1.0"
description = "Execute `playwright install` from Python"
readme = "README.md"
keywords = [
  "browser",
  "install",
  "playwright",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.9,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "playwright>=1.49.1,<2",
]

urls.Repository = "https://github.com/eggplants/install-playwright-python"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "install_playwright" },
]

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.15"
pre-commit = ">=2.20,<4.0"
taskipy = "^1.10.3"
pytest = ">=7.4.3,<9.0.0"
pytest-cov = ">=4.1,<6.0"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
line-length = 120
target-version = [
  'py39',
]

[tool.ruff]
line-length = 120

select = [
  "ALL",
]
ignore = [
  "D",
  "ANN101",
]
mccabe.max-complexity = 18
per-file-ignores."main.py" = [
  "T201", # `print` found
]
per-file-ignores."tests/*test_*.py" = [
  "INP001", # File tests/test_*.py is part of an implicit namespace package. Add an __init__.py.
  "S101",   # Use of assert detected
]

[tool.coverage]
report.exclude_lines = [
  "if TYPE_CHECKING:",
]

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"

[tool.pytype]
python_version = '3.10'
jobs = '4'
report_errors = true
precise_return = true
protocols = true
strict_import = true

[tool.taskipy.tasks]
test = "pytest --cov=install_playwright --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
