[metadata]
name = install_playwright
version = attr: install_playwright.__version__
description = Execute `playwright install` from Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/install-playwright-python
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    playwright
python_requires = >=3.8
include_package_data = True

[options.extras_require]
dev =
    pre-commit
    pytest
    pytest-asyncio
    setuptools>=46.4.0
    types-setuptools

[options.package_data]
install_playwright = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 88
